--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sensortag",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Node.js lib for the TI SensorTag",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,8 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "noble-device": "^1.4.1"
+    "noble-device": "^1.4.1",
+    "async": "~0.2.7"
   },
   "devDependencies": {
     "async": "~0.2.7",
