--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "noble-device": "^1.4.1",
-    "async": "~0.2.7",
-    "jshint": "~1.1.0"
+    "async": "~0.2.7"
   },
   "devDependencies": {
     "async": "~0.2.7",
